k8s/yaml/curl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curl
  namespace: default
  labels:
    app: curl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: curl
  template:
    metadata:
      labels:
        app: curl
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: curl
          image: curlimages/curl
          command:
            - sleep
            - "3600"
