k8s/yaml/control-plane.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: control-plane
spec:
  replicas: 1
  selector:
    matchLabels:
      app: control-plane
  template:
    metadata:
      labels:
        app: control-plane
    spec:
      containers:
        - name: control-plane
          image: quay.io/rlehmann/control-plane:latest
          ports:
            - containerPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: control-plane
spec:
  selector:
    app: control-plane
  ports:
    - protocol: TCP
      port: 7001
      targetPort: 7001

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: control-plane-route
spec:
  parentRefs:
    - name: external-gateway
  hostnames:
    - "control-plane.172.17.0.100.sslip.io"
    - "control-plane.default.svc.cluster.local"
  rules:
    - backendRefs:
        - name: control-plane
          port: 7001
